<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="Text to Speech"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:text="@string/app_info"
            android:textAlignment="center"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:visibility="invisible"
            android:layout_below="@+id/tvHeader"
            android:orientation="horizontal" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_140sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/text_hint"
                android:maxLines="5"
                android:padding="18dp"
                android:background="#00DDDDDD"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                tools:ignore="Deprecated" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btSpeech"


        android:gravity="center"
        android:padding="5dp"
        android:text="@string/btn_info"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSpeech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_background"
        android:onClick="speakOutView"
        android:text="@string/speak_out"
        android:textColor="@android:color/white"
        tools:ignore="OnClick" />

</RelativeLayout>