<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:weightSum="100">

    <include
        android:id="@+id/topbar"
        layout="@layout/topbar" />

    <LinearLayout
        android:id="@+id/translation_languages_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/input_lang_choose"
            android:layout_width="0dp"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            android:layout_weight="40" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/swap"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="56dp"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text=""
            app:icon="@drawable/ic_swap_horiz"
            app:iconPadding="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/result_lang_choose"
            android:layout_width="0dp"
            android:textColor="#fff"
            android:text="as"
            android:layout_height="wrap_content"
            android:layout_weight="40" />
    </LinearLayout>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="30"
        app:cardCornerRadius="0dp"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/input_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="Detect language" />

            <EditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:background="@android:color/transparent"
                android:gravity="top|start"
                android:hint="@string/hint_translate"
                android:inputType="textMultiLine"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/action_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:textColor="#fff"
            android:text="@string/done"
             />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:textColor="#fff"

            android:text="@string/clear"
             />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/primary_translation_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="30"
        app:cardCornerRadius="0dp"

        android:visibility="gone"
        app:contentPadding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#FF9800"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:textColor="#FF9800"

                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textIsSelectable="true"
                tools:text="@string/see_results_here" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>